--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="lib"/>
-	<classpathentry kind="lib" path="/home/arte/cobis/Naiguata/lib/commons-net-1.4.1.jar"/>
-	<classpathentry kind="lib" path="/home/arte/cobis/Naiguata/lib/commons-net-3.6.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/bc22016/Documents/Compartir/Reconversión Monetaria/naiguata/lib/commons-net-1.4.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/bc22016/Documents/Compartir/Reconversión Monetaria/naiguata/lib/commons-net-3.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
