--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,6 +1,9 @@
-/archivos/
+/commons-net-1.4.1.jar
+/commons-net-3.6.jar
 /commons-vfs-2.9.0/
-/commons-vfs-2.9.0-bin.zip
+/archivos/
 /cobis/
+/commons-vfs-2.9.0-bin.zip
 /conexion/
+/jsch-0.1.54.zip
 /jsch-0.1.55.jar
